Fix subid display on mobile

--- a/styles/store.css
+++ b/styles/store.css
@@ -23,6 +23,15 @@ a.steamdb_link:hover {
 	}
 }
 
+@media screen and (max-width: 500px) {
+	html.responsive .game_purchase_action .steamdb_link {
+		float: none;
+		margin-top: 0;
+		align-self: center;
+		margin-right: auto;
+	}
+}
+
 .btn_steamdb .ico16 {
 	background: none;
 }
